fix and completed comic dataSeed